Process Microsoft building GeoJSON directly and filter to county border.   Update documentation.

--- a/MergeAddressesAndBuildings/Properties/launchSettings.json
+++ b/MergeAddressesAndBuildings/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "MergeAddressesAndBuildings": {
       "commandName": "Project",
-      "commandLineArgs": "/NewBuildings=\"D:\\mike\\Projects\\OpenStreetMap\\Spartanburg\\Buildings\\newSpartanburgBuildings.osm\" /NewAddresses=\"D:\\mike\\Projects\\OpenStreetMap\\Spartanburg\\Addresses\\SpartanburgAddresses.osm\" /County=\"Spartanburg County\" /ResultFolder=\"D:\\mike\\Projects\\OpenStreetMap\\Spartanburg\\Addresses\\MergedAddresses\" /Stadte=\"SC\""
+      "commandLineArgs": "/NewBuildings=\"D:\\mike\\Projects\\OpenStreetMap\\Buildings\\SC2\\SouthCarolina.geojson\" /NewAddresses=\"D:\\mike\\Projects\\OpenStreetMap\\Spartanburg\\Addresses\\SpartanburgAddresses.osm\" /County=\"Spartanburg County\" /ResultFolder=\"D:\\mike\\Projects\\OpenStreetMap\\Spartanburg\\Addresses\\MergedAddresses\" /State=\"SC\""
     }
   }
 }
