--- a/MergeAddressesAndBuildings/MergeAddressesAndBuildings.csproj
+++ b/MergeAddressesAndBuildings/MergeAddressesAndBuildings.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <AssemblyVersion>1.2.1.0</AssemblyVersion>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <AssemblyVersion>1.3.0.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
