--- a/MergeAddressesAndBuildings/Properties/launchSettings.json
+++ b/MergeAddressesAndBuildings/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "MergeAddressesAndBuildings": {
       "commandName": "Project",
-      "commandLineArgs": "/NewBuildings=\"D:\\mike\\Projects\\OpenStreetMap\\Buildings\\SC2\\SouthCarolina.geojson\" /NewAddresses=\"D:\\mike\\Projects\\OpenStreetMap\\Spartanburg\\Addresses\\SpartanburgAddresses.osm\" /County=\"Spartanburg County\" /ResultFolder=\"D:\\mike\\Projects\\OpenStreetMap\\Spartanburg\\Addresses\\MergedAddresses\" /State=\"SC\""
+      "commandLineArgs": "/NewBuildings=\"D:\\mike\\Projects\\OpenStreetMap\\JacksonCounty_OR\\JacksonBuildings.osm\" /NewAddresses=\"D:\\mike\\Projects\\OpenStreetMap\\JacksonCounty_OR\\JacksonAddresses.osm\" /County=\"Jackson County\" /ResultFolder=\"D:\\mike\\Projects\\OpenStreetMap\\JacksonCounty_OR\\MergedAddresses\" /State=\"OR\" /TaskManagerSize=5000"
     }
   }
 }
