--- a/MergeAddressesAndBuildings/MergeAddressesAndBuildings.csproj
+++ b/MergeAddressesAndBuildings/MergeAddressesAndBuildings.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <AssemblyVersion>1.3.0.0</AssemblyVersion>
   </PropertyGroup>
 
