--- a/MergeAddressesAndBuildings/Properties/launchSettings.json
+++ b/MergeAddressesAndBuildings/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "MergeAddressesAndBuildings": {
       "commandName": "Project",
-      "commandLineArgs": "/NewBuildings=\"D:\\mike\\Projects\\OpenStreetMap\\JacksonCounty_OR\\JacksonBuildings.osm\" /NewAddresses=\"D:\\mike\\Projects\\OpenStreetMap\\JacksonCounty_OR\\JacksonAddresses.osm\" /County=\"Jackson County\" /ResultFolder=\"D:\\mike\\Projects\\OpenStreetMap\\JacksonCounty_OR\\MergedAddresses\" /State=\"OR\" /TaskManagerSize=5000"
+      "commandLineArgs": "/NewBuildings=\"D:\\mike\\Projects\\OpenStreetMap\\GreenvilleCityData\\Merge\\GreenvilleCityBuildings.osm\" /NewAddresses=\"D:\\mike\\Projects\\OpenStreetMap\\GreenvilleCityData\\Merge\\GreenvilleCityAddresses.osm\" /County=\"Greenville County\" /ResultFolder=\"D:\\mike\\Projects\\OpenStreetMap\\GreenvilleCityData\\Merge\\MergedData\" /State=\"SC\" /TaskManagerSize=500"
     }
   }
 }
